Update KtLint version and reformat all files